2019-08-28  Paul A. Clarke  <pc@us.ibm.com>
    
    	* sysdeps/powerpc/fpu/fesetenv.c (__fesetenv):  Utilize lightweight
    	FPSCR read.
    	(_FPU_MASK_ALL):  Delete.

2019-08-28  Paul A. Clarke  <pc@us.ibm.com>
    
    	* sysdeps/powerpc/fpu/fenv_private.h (libc_feholdsetround_ppc_ctx):
    	Utilize lightweight FPSCR read if possible, set fewer FPSCR bits
    	if possible.
    	(libc_feresetround_ppc):  Replace call to __libc_femergeenv_ppc
    	with simpler required steps, set fewer FPSCR bits if possible.

2019-08-28  Paul A. Clarke  <pc@us.ibm.com>
    
    	* sysdeps/powerpc/fpu/fenv_libc.h (fesetenv_mode): New.
    	(FPSCR_FPRF_MASK): New. (FPSCR_STATUS_MASK): New.
    	* sysdeps/powerpc/fpu/feenablxcpt.c (feenableexcept): Use lighter-
    	weight access to FPSCR; remove unnecessary second FPSCR read and
    	validate.
    	* sysdeps/powerpc/fpu/fedisblxcpt.c (fedisableexcept): Likewise.
    	* sysdeps/powerpc/fpu/fesetmode.c (fesetmode): Use lighter-weight
    	access to FPSCR; Use macros in fenv_libc.h in favor of local.

2019-08-28  Paul A. Clarke  <pc@us.ibm.com>
    
    	* sysdeps/powerpc/fpu/fenv_libc.h: Define FPSCR bitmasks.
    	(fenv_reg_to_exceptions): Replace bitwise operations with mask-shift.
    	(fenv_exceptions_to_reg): New.
    	* sysdeps/powerpc/fpu/fedisblxcpt.c (fedisableexcept): Replace bitwise
    	operation with call to fenv_exceptions_to_reg().
    	* sysdeps/powerpc/fpu/feenablxcpt.c (feenableexcept): Likewise.

2019-09-20  Joseph Myers  <joseph@codesourcery.com>

	* sysdeps/unix/sysv/linux/riscv/vfork.S: Do not include
	<linux/sched.h>.
	(CLONE_VM): New macro.
	(CLONE_VFORK): Likewise.

2019-09-14  Aurelien Jarno  <aurelien@aurel32.net>

	[BZ #24986]
        * sysdeps/unix/alpha/getegid.S: Move to ...
	* sysdeps/unix/sysv/linux/alpha/getegid.S: ... here.
        * sysdeps/unix/alpha/geteuid.S: Move to ...
	* sysdeps/unix/sysv/linux/alpha/geteuid.S: ... here.
        * sysdeps/unix/alpha/getppid.S: Move to ...